--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,117 +38,142 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.3" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:orientation="vertical"
-        android:padding="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline6">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/username_login"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/username_login"
-            app:endIconMode="clear_text"
-            app:startIconContentDescription="@string/content_description_start_icon"
-            app:startIconDrawable="@drawable/ic_person">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/username_login_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLength="15" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password_login"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="@string/password_login"
-            app:endIconMode="password_toggle"
-            app:startIconContentDescription="@string/content_description_start_icon"
-            app:startIconDrawable="@drawable/ic_lock">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_login_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:maxLength="15" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/forgotten_password_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:clickable="true"
-            android:text="@string/forgotten_password"
-            android:layout_gravity="start"
-            android:textColor="@color/chathams_blue"
-            android:textSize="@dimen/small_text_size" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_btn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/medium_btn_height"
-            android:layout_marginTop="48dp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/login_cap" />
-
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/fb_login_button"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_height="wrap_content"
-            xmlns:facebook="http://schemas.android.com/apk/res-auto"
-            facebook:com_facebook_login_text="Login with Facebook"
-            android:layout_gravity="center_horizontal"/>
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/google_login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp"/>
-
         <LinearLayout
-            android:layout_marginTop="36dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="bottom"
-            android:orientation="horizontal">
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:padding="@dimen/login_linear_layout_padding"
+            android:orientation="vertical"
+            >
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/username_login"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username_login"
+                app:endIconMode="clear_text"
+                app:startIconContentDescription="@string/content_description_start_icon"
+                app:startIconDrawable="@drawable/ic_person">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/username_login_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="15" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password_login"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/password_login"
+                app:endIconMode="password_toggle"
+                app:startIconContentDescription="@string/content_description_start_icon"
+                app:startIconDrawable="@drawable/ic_lock">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password_login_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:maxLength="15" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/sign_up_prompt_tv"
+                android:id="@+id/forgotten_password_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dont_have_an_acc_tv"
-                android:textColor="@color/cod_gray"
-                android:textSize="@dimen/small_text_size"
-                android:textStyle="italic" />
+                android:layout_gravity="start"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:fontFamily="@font/roboto_slab"
+                android:text="@string/forgotten_password"
+                android:textColor="@color/chathams_blue"
+                android:textSize="@dimen/small_text_size" />
 
-            <Button
-                android:id="@+id/sign_up_btn"
-                style="?attr/materialButtonOutlinedStyle"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_btn"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/medium_btn_height"
+                android:layout_marginTop="48dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/login_cap" />
+
+            <TextView
+                android:id="@+id/other_logins_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:text="@string/signup_cap" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="36dp"
+                android:fontFamily="@font/roboto_slab"
+                android:text="@string/or_login_with"
+                android:textSize="@dimen/small_text_size" />
 
+            <LinearLayout
+                android:id="@+id/social_icons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/fb_login_button"
+                    android:layout_width="@dimen/social_icons_size"
+                    android:layout_height="@dimen/social_icons_size"
+                    android:layout_margin="@dimen/social_icons_margin"
+                    android:clickable="true"
+                    android:src="@drawable/facebook_ic"/>
+
+                <ImageView
+                    android:id="@+id/google_login_button"
+                    android:layout_width="@dimen/social_icons_size"
+                    android:layout_height="@dimen/social_icons_size"
+                    android:layout_margin="@dimen/social_icons_margin"
+                    android:clickable="true"
+                    android:src="@drawable/google_ic"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/sign_up_prompt_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dont_have_an_acc_tv"
+                    android:textColor="@color/cod_gray"
+                    android:textSize="@dimen/small_text_size"
+                    android:textStyle="italic" />
+
+                <Button
+                    android:id="@+id/sign_up_btn"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:text="@string/signup_cap" />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
