--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_field_max_width">245dp</dimen>
+    <dimen name="social_icons_size">42dp</dimen>
+    <dimen name="social_icons_margin">20dp</dimen>
+    <dimen name="title_text_size">35sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_btn_height">58dp</dimen>
+    <dimen name="login_linear_layout_padding">24dp</dimen>
 </resources>
