--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,8 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="parent">
-    </FrameLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -38,147 +37,177 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.3" />
 
-    <ScrollView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/username_login"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:hint="@string/username_login"
+        app:endIconContentDescription="@string/content_description_end_icon"
+        app:endIconMode="clear_text"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline6">
+        app:layout_constraintTop_toTopOf="@id/username_input_guideline"
+        app:startIconContentDescription="@string/content_description_start_icon"
+        app:startIconDrawable="@drawable/ic_person">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/username_login_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:padding="@dimen/login_linear_layout_padding"
-            android:orientation="vertical"
-            >
+            android:maxLength="35" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/username_login"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/username_login"
-                app:errorEnabled="true"
-                app:endIconMode="clear_text"
-                app:startIconContentDescription="@string/content_description_start_icon"
-                app:endIconContentDescription="@string/content_description_end_icon"
-                app:startIconDrawable="@drawable/ic_person">
+    </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/username_login_et"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLength="35" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_login"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:hint="@string/password_login"
+        app:endIconContentDescription="@string/content_description_end_icon"
+        app:endIconMode="password_toggle"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/username_login"
+        app:startIconContentDescription="@string/content_description_start_icon"
+        app:startIconDrawable="@drawable/ic_lock">
 
-            </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_login_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:maxLength="15" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password_login"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="@string/password_login"
-                app:endIconMode="password_toggle"
-                app:errorEnabled="true"
-                app:startIconContentDescription="@string/content_description_start_icon"
-                app:endIconContentDescription="@string/content_description_end_icon"
-                app:startIconDrawable="@drawable/ic_lock">
+    </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/password_login_et"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:maxLength="15" />
+    <TextView
+        android:id="@+id/forgotten_password_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:fontFamily="@font/roboto_slab"
+        android:text="@string/forgotten_password"
+        android:textColor="@color/chathams_blue"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintStart_toStartOf="@id/forgotten_password_v_guideline"
+        app:layout_constraintTop_toBottomOf="@id/password_login" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/medium_btn_height"
+        android:background="@drawable/button_round_style"
+        android:text="@string/login_cap"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:layout_marginTop="72dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/password_login"/>
 
-            <TextView
-                android:id="@+id/forgotten_password_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginTop="16dp"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:padding="@dimen/login_layout_margin"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn">
+
+        <TextView
+            android:id="@+id/other_logins_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="36dp"
+            android:fontFamily="@font/roboto_slab"
+            android:text="@string/or_login_with"
+            android:textSize="@dimen/small_text_size" />
+
+        <LinearLayout
+            android:id="@+id/social_icons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/fb_login_button"
+                android:layout_width="@dimen/social_icons_size"
+                android:layout_height="@dimen/social_icons_size"
+                android:layout_margin="@dimen/social_icons_margin"
                 android:clickable="true"
-                android:fontFamily="@font/roboto_slab"
-                android:text="@string/forgotten_password"
-                android:textColor="@color/chathams_blue"
-                android:textSize="@dimen/small_text_size" />
+                android:src="@drawable/facebook_ic" />
 
-            <Button
-                android:id="@+id/login_btn"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/medium_btn_height"
-                android:layout_marginTop="48dp"
-                android:background="@drawable/button_round_style"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/login_cap" />
+            <ImageView
+                android:id="@+id/google_login_button"
+                android:layout_width="@dimen/social_icons_size"
+                android:layout_height="@dimen/social_icons_size"
+                android:layout_margin="@dimen/social_icons_margin"
+                android:clickable="true"
+                android:src="@drawable/google_ic" />
 
-            <TextView
-                android:id="@+id/other_logins_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="36dp"
-                android:fontFamily="@font/roboto_slab"
-                android:text="@string/or_login_with"
-                android:textSize="@dimen/small_text_size" />
-
-            <LinearLayout
-                android:id="@+id/social_icons"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
-
-                <ImageView
-                    android:id="@+id/fb_login_button"
-                    android:layout_width="@dimen/social_icons_size"
-                    android:layout_height="@dimen/social_icons_size"
-                    android:layout_margin="@dimen/social_icons_margin"
-                    android:clickable="true"
-                    android:src="@drawable/facebook_ic"/>
-
-                <ImageView
-                    android:id="@+id/google_login_button"
-                    android:layout_width="@dimen/social_icons_size"
-                    android:layout_height="@dimen/social_icons_size"
-                    android:layout_margin="@dimen/social_icons_margin"
-                    android:clickable="true"
-                    android:src="@drawable/google_ic"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="bottom"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/sign_up_prompt_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dont_have_an_acc_tv"
-                    android:textColor="@color/cod_gray"
-                    android:textSize="@dimen/small_text_size"
-                    android:textStyle="italic" />
-
-                <Button
-                    android:id="@+id/sign_up_btn"
-                    style="?attr/materialButtonOutlinedStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="18dp"
-                    android:text="@string/signup_cap" />
-
-            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sign_up_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bottom_guideline">
+
+        <TextView
+            android:id="@+id/sign_up_prompt_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dont_have_an_acc_tv"
+            android:textColor="@color/cod_gray"
+            android:textSize="@dimen/small_text_size"
+            android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/sign_up_btn"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:text="@string/signup_cap" />
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/username_input_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.36" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottom_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.92" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/forgotten_password_v_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.06" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
